// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Nav - Throws an error when proptype for vertsize is wrong 1`] = `
<nav
  className="nav nav-xxxl-vertical"
>
  <ul>
    <li>
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;

exports[`Component: Nav - Throws an error when proptype for widesize is wrong 1`] = `
<nav
  className="nav nav-xxxl-vertical-wide"
>
  <ul>
    <li>
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;

exports[`Component: Nav - renders 1`] = `
<nav
  className="nav"
>
  <ul>
    <li>
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;

exports[`Component: Nav - renders with an active list if state active matches 1`] = `
<nav
  className="nav"
>
  <ul>
    <li>
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;

exports[`Component: Nav - renders with two levels 1`] = `
<nav
  className="nav"
>
  <ul>
    <li>
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li>
      

      <div
        className="submenu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="material-icons"
          >
            shopping_cart
          </i>
          

          <span>
            Transactions
          </span>
          

        </a>
        <ul>
          <li
            className={null}
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <span>
                Purchase history
              </span>
            </a>
          </li>
          <li
            className={null}
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <span>
                Invoice
              </span>
            </a>
          </li>
        </ul>
      </div>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li>
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          aria-hidden="true"
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li>
      

      <div
        className="submenu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="material-icons"
          >
            account_balance
          </i>
          

          <span>
            Account
          </span>
          

        </a>
        <ul>
          <li
            className={null}
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <span>
                Email
              </span>
            </a>
          </li>
          <li
            className={null}
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <span>
                Information
              </span>
            </a>
          </li>
          <li
            className={null}
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <span>
                Other things
              </span>
            </a>
          </li>
        </ul>
      </div>
      

    </li>
  </ul>
</nav>
`;
